--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,17 @@
+@import './theme.css';
+
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  color: var(--text-primary-color);
+  background-color: var(--background-color);
 }
 
 button {
@@ -8,4 +20,5 @@ button {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
+  color: var(--primary-color);
 }
